# AutoGraph

./: .gitignore  README.md  environment.yaml  pyproject.toml  test.py  test_conditional_generation.py  train.py
autograph/: lr_schedulers.py
autograph/datamodules/: graph_dataset.py  mol_dataset.py  networkx_dataset.py  point_cloud_dataset.py  protein_dataset.py  spectre_dataset.py  synthetic_dataset.py
autograph/datamodules/data/: batch_converter.py  sent_utils.pyx  sent_utils_wrapper.py  tokenizer.py
autograph/evaluation/: metrics.py  molsets.py  spectre_utils.py  visualization.py
autograph/models/: seq_models.py
autograph/utils/: mol.py  utils.py
configs/: test.yaml  train.yaml
configs/datamodule/: all.yaml  guacamol.yaml  moses.yaml  networkx.yaml  networkx_big.yaml  planar.yaml  point_cloud.yaml  protein.yaml  qm9.yaml  sbm.yaml  spectre.yaml  synthetic.yaml
configs/experiment/: guacamol.yaml  moses.yaml  networkx_big.yaml  planar.yaml  point_cloud.yaml  qm9.yaml  sbm.yaml  test_guacamol.yaml  test_moses.yaml  test_point_cloud.yaml  test_protein.yaml  test_sbm.yaml
configs/mode/: debug.yaml
